--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -39,6 +39,8 @@ https://github.com/elastic/beats/compare/v6.7.0...6.x[Check the HEAD diff]
 
 *Filebeat*
 
+- Don't apply multiline rules in Logstash json logs. {pull}11346[11346]
+
 *Heartbeat*
 
 *Journalbeat*
