cleanup, fixed docs and added sync_action

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -25575,6 +25575,16 @@ activity-state of the device.
 
 --
 
+*`system.raid.sync_action`*::
++
+--
+type: keyword
+
+Current sync action, if the RAID array is redundant 
+
+
+--
+
 *`system.raid.disks.active`*::
 +
 --
