--- a/metricbeat/module/system/raid/_meta/docs.asciidoc
+++ b/metricbeat/module/system/raid/_meta/docs.asciidoc
@@ -1,3 +1,6 @@
 This is the raid metricset of the module system. It collects stats about the raid.
 
+This metricset is available on:
+- Linux
+
 The config option `raid.mount_point:` can be used to configure the raid mount point.
