--- a/libbeat/docs/upgrading.asciidoc
+++ b/libbeat/docs/upgrading.asciidoc
@@ -58,7 +58,7 @@ a previous 6.x version of {beats}, upgrade to version 6.7 first. If you're using
 other products in the {stack}, upgrade {beats} as part of the
 {stack-ref}/upgrading-elastic-stack.html[{stack} upgrade process].
 
-Upgrading to 6.7 is required because the {es} mapping template was modified to
+Upgrading to 6.7 is required because the {es} index template was modified to
 be compatible with {es} 7.0 (the `_type` setting changed from `doc` to `_doc`).
 
 After upgrading to 6.7, make sure the 6.7 template gets loaded. To load the
@@ -116,7 +116,7 @@ changes in 7.0] for the full list of changed names.
 To help you transition to the new fields, we provide a compatibility layer in
 the form of ECS-compatible field aliases. To use the aliases, set
 `migration.6_to_7.enabled: true` in the Beat's configuration file *before* you
-upgrade the {es} mapping template to 7.0.
+upgrade the {es} index template to 7.0.
 
 The compatibility layer enables you to use 6.x dashboards and visualizations
 with indices created by {beats} 7.0 or later.
@@ -124,10 +124,10 @@ with indices created by {beats} 7.0 or later.
 Did you run the Beat or load the index template before reading this section?
 That's OK. See the clean-up steps described under <<missing-fields>>.
 
-[[upgrade-mapping-template]]
-==== Upgrade the {es} mapping template
+[[upgrade-index-template]]
+==== Upgrade the {es} index template
 
-Mapping templates and the default index names are versioned. For example,
+Index templates and the default index names are versioned. For example,
 Metricbeat {stack-version} typically creates indices like this:
 
 ["source","sh",subs="attributes"]
@@ -139,7 +139,7 @@ And the corresponding {es} template is named +metricbeat-{stack-version}+.
 
 This means that each version of the Beat creates a new index, and it's
 guaranteed that the correct template for that version is applied. With these
-changes in place, you generally don't have to do anything to upgrade the mapping
+changes in place, you generally don't have to do anything to upgrade the index
 template when you move to a new version. Just load the new version of the
 template *before* ingesting any data into {es}. 
 
@@ -187,7 +187,7 @@ for more information.
 
 For other non-{es} outputs, use the metadata from {beats} to set the index, and
 allow {beats} to load and manage the template, as described under
-<<upgrade-mapping-template>>.
+<<upgrade-index-template>>.
 
 IMPORTANT: The index name must match the index pattern in the {beats} index
 template. For example, if {ls} sends events to an index called
@@ -229,8 +229,8 @@ settings:
 |====
 |Old config name | New config name
 |`filebeat.registry_file`    | `filebeat.registry.path`.
-|`registry_file_permissions` | `registry.file_permissions`
-|`registry_flush` | `registry.flush`
+|`filebeat.registry_file_permissions` | `filebeat.registry.file_permissions`
+|`filebeat.registry_flush` | `filebeat.registry.flush`
 |====
 
 Before proceeding with the upgrade, make sure you back up the registry file.
@@ -287,7 +287,7 @@ DELETE /_template/metricbeat-{stack-version}
 Because the index template was loaded without the compatibility layer enabled,
 the required aliases were not created. 
 
-. Load the correct index template. See <<upgrade-mapping-template>>.
+. Load the correct index template. See <<upgrade-index-template>>.
 
 . Restart {beats}.
 
