--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -118,6 +118,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add `coredns` metricbeat module. {pull}10585[10585]
 - The `elasticsearch.index` metricset (with `xpack.enabled: true`) now collects `refresh.external_total_time_in_millis` fields from Elasticsearch. {pull}11616[11616]
 - Allow module configurations to have variants or flavors {pull}9118[9118]
+- Allow module configurations to have variants {pull}9118[9118]
 
 *Packetbeat*
 
