--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -47,6 +47,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Management configuration backup file will now have a timestamps in their name. {pull}11034[11034]
 - Relax validation of the X-Pack license UID value. {issue}11640[11640]
 - Fix a parsing error with the X-Pack license check on 32-bit system. {issue}11650[11650]
+- [libbeat] Escape BOM on JsonReader before trying to decode line {pull}11661[11661]
 
 *Auditbeat*
 
