[Auditbeat] Package: Nullify Librpm's rpmsqEnable (#11628)
Overrides the `rpmsqEnable` function in Librpm that sets and unsets signal traps. Hopefully, this will eliminate the residual test failures.

(cherry picked from commit e047de6f801506cfb889688b39c88912d4a7bc46)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -35,6 +35,8 @@ https://github.com/elastic/beats/compare/v7.0.0-rc1...master[Check the HEAD diff
 
 *Auditbeat*
 
+- Package dataset: Nullify Librpm's rpmsqEnable. {pull}11628[11628]
+
 *Filebeat*
 
 - Fix `add_docker_metadata` source matching, using `log.file.path` field now. {pull}11577[11577]
