--- a/libbeat/docs/breaking.asciidoc
+++ b/libbeat/docs/breaking.asciidoc
@@ -37,7 +37,7 @@ For more information, see the https://github.com/elastic/migrate-management-beat
 
 Elastic licensed {beats} now require an {es} server that has a valid Elastic
 license. To use {beats} with a non-licensed server,
-https://www.elastic.co/downloads/download[download] and install an
+https://www.elastic.co/downloads/beats[download] and install an
 Apache 2.0 licensed distribution.
 
 [[breaking-changes-6.3]]
