--- a/libbeat/docs/monitoring/monitoring-beats.asciidoc
+++ b/libbeat/docs/monitoring/monitoring-beats.asciidoc
@@ -17,11 +17,11 @@
 [partintro]
 --
 
-NOTE: {monitoring} for {beatname_uc} requires {es} {beat_monitoring_version} or later.
+NOTE: The {monitor-features} for {beatname_uc} require {es} {beat_monitoring_version} or later.
 
-{monitoring} enables you to easily monitor {beatname_uc} from {kib}. For more
+The {stack} {monitor-features} enable you to easily monitor {beatname_uc} from {kib}. For more
 information, see
-{xpack-ref}/xpack-monitoring.html[Monitoring the Elastic Stack] and
+{stack-ov}/xpack-monitoring.html[Monitoring the {stack}] and
 {kibana-ref}/beats-page.html[Beats Monitoring Metrics].
 
 To configure {beatname_uc} to collect and send monitoring metrics:
@@ -30,8 +30,8 @@ To configure {beatname_uc} to collect and send monitoring metrics:
 data to {es}. For example, you can use the built-in +{beat_monitoring_user}+ user or
 assign the built-in +{beat_monitoring_user}+ role to another user. For more
 information, see
-{xpack-ref}/setting-up-authentication.html[Setting Up User Authentication] and
-{xpack-ref}/built-in-roles.html[Built-in Roles].
+{stack-ov}/setting-up-authentication.html[Setting Up User Authentication] and
+{stack-ov}/built-in-roles.html[Built-in Roles].
 
 . Add the `monitoring` settings in the {beatname_uc} configuration file. If you
 configured the {es} output and want to send {beatname_uc} monitoring events to
