--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -21,6 +21,7 @@ grouped in the following categories:
 * <<exported-fields-docker-processor>>
 * <<exported-fields-ecs>>
 * <<exported-fields-elasticsearch>>
+* <<exported-fields-envoyproxy>>
 * <<exported-fields-haproxy>>
 * <<exported-fields-host-processor>>
 * <<exported-fields-icinga>>
@@ -5354,6 +5355,60 @@ type: keyword
 example: doc
 
 Type
+
+--
+
+[[exported-fields-envoyproxy]]
+== Envoyproxy fields
+
+Module for handling logs produced by envoy
+
+
+
+[float]
+== envoyproxy fields
+
+Fields from envoy proxy logs after normalization
+
+
+
+*`envoyproxy.log_type`*::
++
+--
+type: keyword
+
+Envoy log type, normally ACCESS
+
+
+--
+
+*`envoyproxy.response_flags`*::
++
+--
+type: keyword
+
+Response flags
+
+
+--
+
+*`envoyproxy.upstream_service_time`*::
++
+--
+type: double
+
+Upstream service time
+
+
+--
+
+*`envoyproxy.request_id`*::
++
+--
+type: keyword
+
+ID of the request
+
 
 --
 
