--- a/libbeat/docs/release-notes/7.0.0.asciidoc
+++ b/libbeat/docs/release-notes/7.0.0.asciidoc
@@ -12,7 +12,8 @@ upgrade.
 
 - Empty `meta.json` file will be treated as a missing meta file. {issue}8558[8558]
 - Removed dashboards and index patterns generation for Kibana 5. {pull}8927[8927]
-- On systems with systemd, the Beats log is now written to journald by default rather than file. To revert this behaviour override BEAT_LOG_OPTS with an empty value. {pull}8942[8942].
+- On systems with systemd, the Beats log is now written to journald by default rather than file.
+  To revert this behaviour override BEAT_LOG_OPTS with an empty value. {pull}8942[8942].
 - Automaticall cap signed integers to 63bits. {pull}8991[8991]
 - Use _doc as document type. {pull}9056[9056]
 - Update add_cloud_metadata fields to adjust to ECS. {pull}9265[9265]
@@ -23,11 +24,13 @@ upgrade.
 - Remove --configtest command line flag. {pull}10138[10138]
 - Remove --setup command line flag. {pull}10138[10138]
 - Remove --version command line flag. {pull}10138[10138]
-- Import ECS change https://github.com/elastic/ecs/pull/308[ecs#308]: leaf field `user.group` is now the `group` field set. {pull}10275[10275]
+- Import ECS change https://github.com/elastic/ecs/pull/308[ecs#308]:
+  leaf field `user.group` is now the `group` field set. {pull}10275[10275]
 - Docker and Kubernetes labels/annotations will be "dedoted" by default. {pull}10338[10338]
 - ILM will be available by default if Elasticsearch > 7.0 is used. {pull}10347[10347]
 - Move output.elasticsearch.ilm settings to setup.ilm. {pull}10347[10347]
-- On Google Cloud Engine (GCE) the add_cloud_metadata will now trim the project info from the cloud.machine.type and cloud.availability_zone. {issue}10968[10968]
+- On Google Cloud Engine (GCE) the add_cloud_metadata will now trim the project
+  info from the cloud.machine.type and cloud.availability_zone.  {issue}10968[10968]
 - Rename `migration.enabled` config to `migration.6_to_7.enabled`. {pull}11284[11284]
 
 *Auditbeat*
@@ -77,17 +80,21 @@ upgrade.
 - Rename a few `mongodb.*` fields to map to ECS. {pull}10009[10009]
 - Remove service.name from Elastcsearch module. Replace by service.type. {pull}10042[10042]
 - Rename `read_timestamp` to `event.created` for all Filebeat modules using it. {pull}10139[10139]
-- Now save the 'first seen' timestamp in `event.created` (previously `read_timestamp`), instead of saving the parsed date. Now aligned with `event.created` semantics elsewhere. {pull}10139[10139]
+- Now save the 'first seen' timestamp in `event.created` (previously `read_timestamp`),
+  instead of saving the parsed date. Now aligned with `event.created` semantics elsewhere. {pull}10139[10139]
 - Adjust fileset `haproxy.log` to map to ECS. {pull}10143[10143]
 - Rename `mysql.error.thread_id` and `mysql.slowlog.id` to `mysql.thread_id`. {pull}10161[10161]
 - Remove `mysql.error.timestamp`  and `mysql.slowlog.timestamp`. {pull}10161[10161]
-- Rename multiple fields to `http.response.body.bytes`, from modules "apache", "iis", "kibana", "nginx" and "traefik", including `http.response.content_length` (ECS). {pull}10188[10188]
+- Rename multiple fields to `http.response.body.bytes`, from modules "apache", "iis",
+  "kibana", "nginx" and "traefik", including `http.response.content_length` (ECS). {pull}10188[10188]
 - Rename many `auditd.log.*` fields to map to ECS. {pull}10192[10192]
 - Remove numeric coercions for `user.id` and `group.id`. IDs should be `keyword`. {pull}10233[10233]
-- Migrate multiple fields to `event.duration`, from modules "apache", "elasticsearch", "haproxy", "iis", "kibana", "mysql", "nginx", "postgresql" and "traefik", including `http.response.elapsed_time` (ECS). {pull}10188[10188], {pull}10274[10274]
+- Migrate multiple fields to `event.duration`, from modules "apache", "elasticsearch",
+  "haproxy", "iis", "kibana", "mysql", "nginx", "postgresql" and "traefik", including `http.response.elapsed_time` (ECS). {pull}10188[10188], {pull}10274[10274]
 - Ingesting Elasticsearch audit logs is only supported with Elasticsearch 6.5.0 and above {pull}10352[10352]
 - Migrate Elasticsearch audit logs fields to ECS {pull}10352[10352]
-- Change type from haproxy.log fileset fields from text to keyword: response.captured_headers, request.captured_headers, `raw_request_line`, `mode`. {pull}10397[10397]
+- Change type from haproxy.log fileset fields from text to keyword:
+  response.captured_headers, request.captured_headers, `raw_request_line`, `mode`. {pull}10397[10397]
 - Remove field `kafka.log.trace.full` from kafka.log fielset. {pull}10398[10398]
 - Change field `kafka.log.class` for kafka.log fileset from text to keyword. {pull}10398[10398]
 - Change type of field backend_url and frontend_name in traefik.access metricset to type keyword. {pull}10401[10401]
@@ -106,8 +113,13 @@ upgrade.
 
 *Heartbeat*
 
-- A number of fields have been aliased to their relevant counterparts in the `url.*` field. Existing visualizations should mostly work. The fields that have been moved are `monitor.scheme -> url.scheme`, `monitor.host -> url.domain`, `resolve.host -> url.domain`, `http.url -> url.full`,  `tcp.port -> url.port`. In addition to these moves the new fields `url.username`, `url.password`, `url.path`, and `url.query` are now present. It should be noted that the `url.password` field does not contain actual password values, but rather the text `<hidden>` {pull}9570[9570].
-- monitor IDs are now configurable. Auto generated monitor IDs now use a different formula based on a hash of their config values. If you wish to have continuity with the old format of monitor IDs you'll need to set the `id` property explicitly. {pull}9697[9697]
+- A number of fields have been aliased to their relevant counterparts in the `url.*` field.
+  Existing visualizations should mostly work. The fields that have been moved are
+  `monitor.scheme -> url.scheme`, `monitor.host -> url.domain`, `resolve.host -> url.domain`, `http.url -> url.full`,
+  `tcp.port -> url.port`. In addition to these moves the new fields `url.username`, `url.password`, `url.path`, and `url.query` are now present.
+  It should be noted that the `url.password` field does not contain actual password values, but rather the text `<hidden>` {pull}9570[9570].
+- monitor IDs are now configurable. Auto generated monitor IDs now use a different formula based on a hash of their config values.
+  If you wish to have continuity with the old format of monitor IDs you'll need to set the `id` property explicitly. {pull}9697[9697]
 - The included Kibana HTTP dashboard is now removed in favor of the Uptime app in Kibana. {pull}10294[10294]
 
 *Journalbeat*
@@ -135,7 +147,8 @@ upgrade.
   - php_fpm.process.request_uri
   - php_fpm.process.script
 - Adjust Redis.info metricset fields to ECS. {pull}10319[10319]
-- Refactor munin module to collect an event per plugin and to have more strict field mappings. `namespace` option has been removed, and will be replaced by `service.name`. {pull}10322[10322]
+- Refactor munin module to collect an event per plugin and to have more strict field mappings.
+  `namespace` option has been removed, and will be replaced by `service.name`. {pull}10322[10322]
 - Migrate system process metricset fields to ECS. {pull}10332[10332]
 - Migrate system socket metricset fields to ECS. {pull}10339[10339]
 - Renamed direction values in sockets to ECS recommendations, from incoming/outcoming to inbound/outbound. {pull}10339[10339]
@@ -157,7 +170,8 @@ upgrade.
 
 - Changed Packetbeat fields to align with ECS. {issue}7968[7968]
 - Renamed the flow event fields to follow Elastic Common Schema. {pull}9121[9121]
-- Renamed several client and server fields. IP, port, and process metadata are now contained under the client and server namespaces. {issue}9303[9303]
+- Renamed several client and server fields. IP, port, and process metadata are
+  now contained under the client and server namespaces. {issue}9303[9303]
 - Adjust Packetbeat `http` fields to ECS{pull}9645[9645]
   - `http.request.body` moves to `http.request.body.content`
   - `http.response.body` moves to `http.response.body.content`
@@ -192,15 +206,18 @@ upgrade.
 - Ensure `source.address` is always populated by the nginx module (ECS). {pull}10418[10418]
 - Fix errors in filebeat Zeek dashboard and README files. Add notice.log support. {pull}10916[10916]
 - Fix a bug when converting NetFlow fields to snake_case. {pull}10950[10950]
-- Add on_failure handler for Zeek ingest pipelines. Fix one field name error for notice and add an additional test case. {issue}11004[11004] {pull}11105[11105]
-- Fix issue preventing docker container events to be stored if the container has a network interface without ip address. {issue}11225[11225] {pull}11247[11247]
+- Add on_failure handler for Zeek ingest pipelines. Fix one field name error
+  for notice and add an additional test case. {issue}11004[11004] {pull}11105[11105]
+- Fix issue preventing docker container events to be stored if the container
+  has a network interface without ip address. {issue}11225[11225] {pull}11247[11247]
 - Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
 - Don't apply multiline rules in Logstash json logs. {pull}11346[11346]
 - Fix panic in add_kubernetes_metadata processor when key `log` does not exist. {issue}11543[11543] {pull}11549[11549]
 
 *Heartbeat*
 
-- Fixed rare issue where TLS connections to endpoints with x509 certificates missing either notBefore or notAfter would cause the check to fail with a stacktrace.  {pull}9566[9566]
+- Fixed rare issue where TLS connections to endpoints with x509 certificates missing either
+  notBefore or notAfter would cause the check to fail with a stacktrace.  {pull}9566[9566]
 - Fix checks for TCP send/receive data {pull}11118[11118]
 
 *Metricbeat*
