--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -61,6 +61,8 @@ https://github.com/elastic/beats/compare/v7.0.0-rc1...master[Check the HEAD diff
 
 *Auditbeat*
 
+- Add support to the system package dataset for the SUSE OS family. {pull}11634[11634]
+
 *Filebeat*
 
 *Heartbeat*
