Change cloud.provider from ec2 to aws in add_cloud_metadata

--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -495,7 +495,7 @@ provider and cache the instance metadata.
 
 The following cloud providers are supported:
 
-- Amazon Elastic Compute Cloud (EC2)
+- Amazon Web Services (AWS)
 - Digital Ocean
 - Google Compute Engine (GCE)
 - https://www.qcloud.com/?lang=en[Tencent Cloud] (QCloud)
@@ -527,7 +527,7 @@ default).
 The metadata that is added to events varies by hosting provider. Below are
 examples for each of the supported providers.
 
-_EC2_
+_AWS_
 
 [source,json]
 -------------------------------------------------------------------------------
@@ -536,7 +536,7 @@ _EC2_
     "availability_zone": "us-east-1c",
     "instance_id": "i-4e123456",
     "machine_type": "t2.medium",
-    "provider": "ec2",
+    "provider": "aws",
     "region": "us-east-1"
   }
 }
