Update envoy tcp proxy case

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -5395,9 +5395,11 @@ Response flags
 *`envoyproxy.upstream_service_time`*::
 +
 --
-type: double
+type: long
 
-Upstream service time
+format: duration
+
+Upstream service time in nanoseconds
 
 
 --
